--- a/19th_August_Python_Bascics.ipynb
+++ b/19th_August_Python_Bascics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "0a55f40a-9108-4214-8b53-5f231bbd24c8",
    "metadata": {},
    "outputs": [
@@ -28,23 +28,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After swapping:\n",
-      "x = 10\n",
-      "y = 5\n"
+      "Before swap x: 5 and y: 10\n",
+      "After swap x: 10 and y: 5\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "x = 5\n",
     "y = 10\n",
     "\n",
-    "x = x + y\n",
-    "y = x - y\n",
-    "x = x - y\n",
+    "def swap_variables(x,y):\n",
+    "  print(f\"Before swap x: {x} and y: {y}\")\n",
+    "  x,y = y, x\n",
+    "  print(f\"After swap x: {x} and y: {y}\")\n",
     "\n",
-    "print(\"After swapping:\")\n",
-    "print(\"x =\", x)\n",
-    "print(\"y =\", y)\n"
+    "swap_variables(x,y)"
    ]
   },
   {
@@ -64,7 +63,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the length of the rectangle:  12\n",
@@ -108,7 +107,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the temperature in Celsius:  48\n"
@@ -156,7 +155,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a string:  Batman\n"
@@ -196,7 +195,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a sentence:  Batman, the Dark Knight, defends Gotham with unmatched determination and unparalleled gadgets.\n"
@@ -242,7 +241,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a string:  Bruce Wayne\n"
@@ -282,7 +281,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter a string:  madam\n"
@@ -320,22 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "e2741983-87f0-45a0-b19e-096626b7ae9d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a string:  Batman\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified string without spaces: Batman\n"
+      "Modified string without spaces: iambatman\n"
      ]
     }
    ],
@@ -349,6 +341,14 @@
     "# Displaying the modified string\n",
     "print(\"Modified string without spaces:\", modified_string)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f6af941",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -367,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
